[PLM-5870] | [LogixPro | High Contrast Theme 3 | Order Manager | Color of the buttons is not consistent  ] | [Fixes]

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -162,7 +162,6 @@ input:-webkit-autofill {
 .mat-icon-button.mat-primary,
 .mat-stroked-button.mat-primary {
   color: var(--clr-primary-500);
-  background: var(--clr-pure-white);
   // border: 1px solid var(--clr-primary-500);
 }
 
